dataset1235/2025-2/2868285114/users/2008605748/executions/2135592949_3221148872.log
== SUBMISSION (2025-08-12 22:45:36)
-- CODE: 
print(40+35=75)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 22:46:25)
-- CODE: 
print(40+35)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 22:45:30)
-- CODE: 
print(40+35=75)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 22:45:31)
-- CODE: 
print(40+35=75)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
